Create homepage with header

--- a/Programming/TOP-html-css/youtube_clone/youtube_clone.html
+++ b/Programming/TOP-html-css/youtube_clone/youtube_clone.html
@@ -3,8 +3,163 @@
    <head>
    	<meta charset="utf-8">
    	   <title> Youtube!</title>
+   	   <link href="youtube_clone.css" rel="stylesheet"/>
    	</head>
    	<body>
+   		<header>
+	   			<img class="youtube_logo" src="img/youtube_banner.png">
+	   			<input type="text" name="search" class = "search_text"><!--
+	   			--><button type="submit"><img src="https://openclipart.org/image/2400px/svg_to_png/232081/magnifying-glass.png" class="search_button"></button>
+	   			<img class="header_person" src = "img/header_body.png">
+	   			<button type="upload" class="upload_button">Upload</button>
+   		</header>
+   		<section class="content">
+			<section>
+				<iframe width="800" height="450" src="https://www.youtube.com/embed/zn6k3gXCszE" frameborder="0" allowfullscreen></iframe>
+			</section>
+			<section class="main_video">
+
+				<h1 class="video_title">Why We Run - Salomon Running TV S3 E01</h1>
+				<img class="salomon_logo" src="img/salomon.jpg">
+				<div class="salomon_channel">
+					<a href="#"> Salomon Running</a>
+				</div>
+				<br>
+				<div class="subscribe_button">
+					<img class="subscribe_image" src="img/subscribe_button.jpg"><div class="subscribe_words">Subscribe</div>
+				</div>
+				<div class="subscribe_count"><div class="count">65,555</div></div>
+				<div class="viewer_count">328,232</div>
+				<hr class="no_likes"><hr class= "likes">
+				<div class="add_to">
+					<a href= "#"><img src="img/add_to.png">   Add to
+					<img src="img/share.png">   Share
+					<img src="img/more.png">   More</a>
+				</div>
+				<div class="like_dislike">
+					<img src="img/like.png"> 2,000
+					<img src="img/dislike.png"> 7
+				</div>
+
+			</section>
+			<section>
+				<span class="font_size_publish"><strong>Published on Sep 10, 2012</strong>
+				</br>
+				Way of life with Salomon running episodio della serie TV di Salomon.</span>
+				</br>
+				</br>
+				<span class="subscribe_here">SUBSCRIBE HERE - ISCRIVITI <a href="#">http://www.youtube.com/subscription_c...</a></span>
+				</br>
+				<strong>Category</strong></span> <span class="tab1">Sports</span>
+				</br>
+				<strong>License</strong><span class="tab2">Standard YouTube License</span>
+				<hr>
+				<a href="#"><span class="show_more_text_2">Show Less</span></a>
+
+			</section>
+			<section class="comment	section">
+				ALL COMMENTS(103)
+				<p><textarea rows='3' cols="80">Add a public comment...</textarea></p>
+				<button href="#" >Top Comment</button>
+				
+				<a href="#"><div class="up_next">
+					<img class = "header_body" src="img/header_body.png">
+					<div class="comment_div">
+						<span class="comment_username"><a href="#">PUSHUPS</a></span><span class="comment_time">10 months ago</span>
+					</br>
+						<span class="comment">dads</br></span>
+						<span class="reply">reply</span>
+						<img src="img/like.png">
+						<img src="img/dislike.png">
+					</div>
+				</div></a>
+				</br></br></br></br></br>
+				<hr>
+				<a href="#"><span class="show_more_text_2"><button>Show More</button></span></a>
+
+			</section>
+		</section class="video_title_section">
+			<aside>
+				<div>
+					Up Next
+					<span class="next">Autoplay  <img src="img/autoplay.png"></span>
+			    </div>
+			    <br>
+				<a href="#"><div class="up_next">
+					<img class = "aside_image" src="thumbs/run1.jpg">
+					<div class="information">
+						<span class="title">dsadsa</br></span>
+						<span class="director">dads</br></span>
+						<span class="views">dsfds</span>
+					</div>
+				</div></a>
+				<span class="show_more">______________________________________________</span>
+				<a href="#"><div class="up_next">
+					<img class = "aside_image" src="thumbs/run2.jpg">
+					<div class="information">
+						<span class="title">dsadsa</br></span>
+						<span class="director">dads</br></span>
+						<span class="views">dsfds</span>
+					</div>
+				</div></a>
+				<a href="#"><div class="up_next">
+					<img class = "aside_image" src="thumbs/run3.jpg">
+					<div class="information">
+						<span class="title">dsadsa</br></span>
+						<span class="director">dads</br></span>
+						<span class="views">dsfds</span>
+					</div>
+				</div></a>
+				<a href="#"><div class="up_next">
+					<img class = "aside_image" src="thumbs/run4.jpg">
+					<div class="information">
+						<span class="title">dsadsa</br></span>
+						<span class="director">dads</br></span>
+						<span class="views">dsfds</span>
+					</div>
+				</div></a>
+				<a href="#"><div class="up_next">
+					<img class = "aside_image" src="thumbs/run5.jpg">
+					<div class="information">
+						<span class="title">dsadsa</br></span>
+						<span class="director">dads</br></span>
+						<span class="views">dsfds</span>
+					</div>
+				</div></a>
+				<a href="#"><div class="up_next">
+					<img class = "aside_image" src="thumbs/run6.jpg">
+					<div class="information">
+						<span class="title">dsadsa</br></span>
+						<span class="director">dads</br></span>
+						<span class="views">dsfds</span>
+					</div>
+				</div></a>
+				<a href="#"><div class="up_next">
+					<img class = "aside_image" src="thumbs/run7.jpg">
+					<div class="information">
+						<span class="title">dsadsa</br></span>
+						<span class="director">dads</br></span>
+						<span class="views">dsfds</span>
+					</div>
+				</div></a>
+				<span class="show_more">______________________________________________</span>
+				<a href="#" class="show_more_text">Show More<a>
+			</aside>
+		</div>
+
+   		<footer>
+   			<ul class="footer_buttons">
+   			<img class="youtube_logo" src="img/youtube_banner.png">
+   				<button class="language">Language:<strong> English</strong></button>
+   				<button class="country">Country:<strong> 'Merica</strong></button>
+   				<button class="restricted_mode">Language:<strong> English</strong></button>
+   				<button class="history"><strong>History</strong></button>
+   				<button class="help"><strong>Help</strong></button>
+   			</ul>
+   			<br>
+   			<hr class ="hr_footer">
+   		</footer>
+
 
 
 
