--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/css/main.cs
+    <link rel="stylesheet" type="text/css" href="/css/main.cs">
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+    <script src="jquery-1.12.2.min.js"></script>
+    <script src="https://github.com/lynchd2/website/blob/gh-pages/assets/js/application.js"></script>
+    
+
   </head>
 <body>
 <div class="jumbotron">
