--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script> 
     <script src="assets/js/application.js"></script>
-    <script src="https://github.com/lynchd2/website/blob/gh-pages/assets/js/application.js"></script>
-    
-
   </head>
 <body>
 <div class="jumbotron">
