--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="assets/js/application.js"></script>
   </head>
 <body>
-<div class="jumbotron">
+<div class="jumbotron jumbotron-fluid">
   <div class="name-container">
     <span class="brackets-name">["</span>
     <span class="dylan-lynch">Dylan Lynch</span>
