--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
 <body>
 <div class="jumbotron jumbotron-fluid">
+  <div class="container">
   <div class="name-container">
     <span class="brackets-name">["</span>
     <span class="dylan-lynch">Dylan Lynch</span>
@@ -24,5 +25,6 @@
   </div>
   <a href= "http://www.github.com/lynchd2" class="github-black"></a>
   </div>
+ </div>
 </body>
 </html>
