--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 <body>
 <div class="jumbotron jumbotron-fluid">
-  <div class="container">
+  <div class="container-fluid">
   <div class="name-container">
     <span class="brackets-name">["</span>
     <span class="dylan-lynch">Dylan Lynch</span>
