--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Website by lynchd2</title>
+    <title>Website by Dylan Lynch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -13,9 +13,17 @@
     <script src="assets/js/application.js"></script>
   </head>
 <body>
+<div class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <a href="projects.html" class="navbar-text navbar-right navbar-projects">Projects</a>
+    <a href="about.html" class="navbar-text navbar-right navbar-about">About</a>
+  </div>
+</div>
 <div class="jumbotron jumbotron-fluid">
   <div class="container-fluid">
   <div class="name-container">
+    <div class="profile-head">
+    </div>
     <span class="brackets-name">["</span>
     <span class="dylan-lynch">Dylan Lynch</span>
     <span class="brackets-name">"]</span>
