--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <script src="assets/js/application.js"></script>
   </head>
-<body>
+<body class="full-background">
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
-    <a href="projects.html" class="navbar-text navbar-right navbar-projects">Projects</a>
-    <a href="about.html" class="navbar-text navbar-right navbar-about">About</a>
+    <ul class="nav navbar-nav navbar-right">     
+      <li class="navbar-slider"><a href="index.html" class="navbar-about"><span class="home-text">Home</span></a>
+      <div class="slider"></div>      
+      </li>
+      <div class="slider"></div> 
+      <li class="navbar-slider"><a href="about.html" class="navbar-about"><span class="about-text">About</span></a>
+      <div class="slider"></div>      
+      </li>
+      <li class="navbar-slider"><a href="projects.html" class= "navbar-projects"><span class="project-text">Projects</span></a>
+      <div class="slider"></div>
+    </li>
+    </ul> 
   </div>
-</div>
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron home jumbotron-fluid">
   <div class="container-fluid">
   <div class="name-container">
     <div class="profile-head">
