Write about part and style

--- a/about.html
+++ b/about.html
@@ -30,30 +30,26 @@
   </div>
 </div>
   <div class="jumbotron about">
-    <h3>About</h3>
+    <h3 class="about-header">About</h3>
     <div class="container">
     <div class="row">
-      <div class="col-sm-6 col-md-6">
+      <div class="col-sm-12 col-md-12">
         <div class="thumbnail">
-          <img src="..." alt="...">
           <div class="caption">
-            <h3>Thumbnail label</h3>
-            <p>...</p>
+                <div class="profile-head"></div>
+            <h3>Greetings, World!</h3>
+            <p>My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology to add to my arsenal of skills.</p>
+            <p>Aside from programming I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love exploring new places and traveling. </p>
           </div>
+
         </div>
+        <div class="pos arrowBottom"></div>
       </div>
-       <div class="col-sm-6 col-md-6">
-        <div class="thumbnail">
-          <img src="..." alt="...">
-          <div class="caption">
-            <h3>Thumbnail label</h3>
-            <p>...</p>
-          </div>
-        </div>
-      </div>
+
     </div> 
+
   </div>
-  <div class="pos arrowBottom"></div>
+  
 </div>
 
 
