Finish about page. Add skills section on the about page. Clean up styling and make about about page more resonsive.

--- a/about.html
+++ b/about.html
@@ -35,35 +35,45 @@
     <div class="row">
       <div class="col-sm-12 col-md-12">
         <div class="thumbnail">
-          <div class="caption">
-                <div class="profile-head"></div>
-            <h3>Greetings, World!</h3>
-            <p>My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology to add to my arsenal of skills.</p>
-            <p>Aside from programming I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love exploring new places and traveling. </p>
+            <div class="profile-head"></div>
+            <h3 class="greetings-header">Greetings, World!</h3>
+            <p class="about-paragraph">My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology to add to my arsenal of skills.</p>
+            <p class="about-paragraph">Aside from programming, I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love traveling and exploring new places. </p>
           </div>
-
-        </div>
         <div class="pos arrowBottom"></div>
       </div>
-
     </div> 
-
   </div>
-  
 </div>
 
 
 <div class="jumbotron about-skills">
-    <h3>Skills</h3>
-    <div class="container">
+    <h3 class="skills-header">Skills</h3>
+    <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-6 col-md-6">
-        <div class="thumbnail">
-          <img src="..." alt="...">
-          <div class="caption">
-            <h3>Thumbnail label</h3>
-            <p>...</p>
-          </div>
+      <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="thumbnail thumbnail-tech">
+            <h3 class="technology-header">Front-End Technology Used</h3>
+            <p class="front-end-technology-list">
+              <li class="front-tech">HTML & CSS</li>
+              <li class="front-tech">SCSS</li>
+              <li class="front-tech">Javascript</li>
+              <li class="front-tech">JQuery</li>
+              <li class="front-tech">Bootstrap</li>
+              <li class="front-tech">AJAX</li>
+            </p>
+        </div>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="thumbnail thumbnail-tech">
+            <h3 class="technology-header">Back-End Technology Used</h3>
+            <p class="back-end-technology-list">
+              <li class="back-tech">Ruby</li>
+              <li class="back-tech">Ruby on Rails</li>
+              <li class="back-tech">SQLite</li>
+              <li class="back-tech">PostgreSQL</li>
+              <li class="back-tech">Heroku</li>
+            </p>
         </div>
       </div>
     </div>
