--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
     </ul> 
   </div>
 <div class="jumbotron home jumbotron-fluid">
-  <div class="container-fluid">
+  <div class="container">
   <div class="name-container">
     <span class="brackets-name">["</span>
     <span class="dylan-lynch">Dylan Lynch</span>
     <span class="brackets-name">"]</span>
   </div>
   <div class="occupation-container">
-    <p class="occupation">
-    <span class="brackets-occupation">"[</span>
+    <span class="brackets-occupation">[ "</span>
       <span class="web-dev">Full Stack Web Developer</span>
-    <span class="brackets-occupation">]"</span></p>
+    <span class="brackets-occupation">" ]</span>
   </div>
   <a href= "http://www.github.com/lynchd2" class="github-black"></a>
   </div>
