--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <script src="assets/js/application.js"></script>
   </head>
-<body>
+<body class="full-background">
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <ul class="nav navbar-nav navbar-right">     
