Finish about page with other skills. Add mail icon to homepage with link to email. Fix bracket hover effect on homepage. Start project page with one started and three empty spaces for other projects.

--- a/about.html
+++ b/about.html
@@ -30,15 +30,17 @@
   </div>
 </div>
   <div class="jumbotron about">
-    <h3 class="about-header">About</h3>
+
     <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-12">
-        <div class="thumbnail">
+        <div class="thumbnail thumbnail-intro">
             <div class="profile-head"></div>
             <h3 class="greetings-header">Greetings, World!</h3>
-            <p class="about-paragraph">My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology to add to my arsenal of skills.</p>
-            <p class="about-paragraph">Aside from programming, I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love traveling and exploring new places. </p>
+            <div class="about-paragraph">
+              <p>My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology.</p>
+              <p>Aside from programming, I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love traveling and exploring new places. </p>
+            </div>
           </div>
         <div class="pos arrowBottom"></div>
       </div>
@@ -73,6 +75,15 @@
               <li class="back-tech">SQLite</li>
               <li class="back-tech">PostgreSQL</li>
               <li class="back-tech">Heroku</li>
+            </p>
+        </div>
+      </div>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+        <div class="thumbnail">
+            <h3 class="technology-header">Other Technology:</h3>
+            <p class="">
+              <li class="back-tech">Frequent use of Git for version control and Github to host projects.</li>
+              <li class="back-tech">RSpec for Test-Driven developemnt and Behavior-Driven development.</li>
             </p>
         </div>
       </div>
