--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,34 @@
       </li>
       <li class="navbar-slider"><a href="projects.html" class= "navbar-projects"><span class="project-text">Projects</span></a>
       <div class="slider"></div>
-    </li>
+      </li>
     </ul> 
   </div>
 </div>
+<div class="jumbotron projects first-project">
+  <div class="container-fluid">
+    <div class="row row-projects">
+      <div class="col-xs-6">
+        <img src="assets/images/givememotivation-screenshot.jpeg" class="first-project-image">
+      </div>
+      <div class="col-xs-6 project-description">
+        <a href="givememotivation.com" class="first-project-link"><h2>GiveMeMotivation.com</h2></a>
+        <p class="first-project-description">
+          A personal project developed by using Ruby on Rails. Find motivational images and videos from various categories. Don't know what to look for? Find a random image or video!
+        </p>
+      </div>
+      <div class="btn btn-lg btn-hide">HTML & CSS</div>
+      <div class="btn btn-lg btn-hide">Ruby</div>
+      <div class="btn btn-lg btn-hide">Ruby on Rails</div>
+      <div class="btn btn-lg btn-hide">Bootsrap</div>
+    </div>
+  </div>
+</div>
+  <div class="jumbotron projects second-project">
+  </div>
+  <div class="jumbotron projects third-project">
+  </div>
+  <div class="jumbotron projects fourth-project">
+  </div>
 </body>
 </html>
