--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Website by Dylan Lynch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
@@ -30,18 +29,19 @@
   </div>
 <div class="jumbotron home jumbotron-fluid">
   <div class="container">
-  <div class="name-container">
-    <span class="brackets-name">["</span>
-    <span class="dylan-lynch">Dylan Lynch</span>
-    <span class="brackets-name">"]</span>
+    <div class="name-container">
+      <span class="brackets-name">["</span>
+      <span class="dylan-lynch">Dylan Lynch</span>
+      <span class="brackets-name">"]</span>
+    </div>
+    <div class="occupation-container">
+      <span class="brackets-occupation">[ "</span>
+        <span class="web-dev">Full Stack Web Developer</span>
+      <span class="brackets-occupation">" ]</span>
+    </div>
   </div>
-  <div class="occupation-container">
-    <span class="brackets-occupation">[ "</span>
-      <span class="web-dev">Full Stack Web Developer</span>
-    <span class="brackets-occupation">" ]</span>
-  </div>
-  <a href= "http://www.github.com/lynchd2" class="github-black"></a>
-  </div>
+    <a href= "http://www.github.com/lynchd2" class="github-black">Click</a>
+    <a href="mailto:dylynch91@gmail.com" class="mail-black"></a>
  </div>
 </body>
 </html>
