Change background image to show up on mobile devices.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Dylan Lynch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -79,12 +81,10 @@
         </div>
       </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
-        <div class="thumbnail">
-            <h3 class="technology-header">Other Technology:</h3>
-            <p class="">
+        <div class="thumbnail other-technology">
+          <h3 class="technology-header">Other Technology:</h3>
               <li class="back-tech">Frequent use of Git for version control and Github to host projects.</li>
               <li class="back-tech">RSpec for Test-Driven developemnt and Behavior-Driven development.</li>
-            </p>
         </div>
       </div>
     </div>
