--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Dylan Lynch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -33,18 +35,22 @@
   <div class="container-fluid">
     <div class="row row-projects">
       <div class="col-xs-6">
-        <img src="assets/images/givememotivation-screenshot.jpeg" class="first-project-image">
+        <div class="thumbnail">
+          <img src="assets/images/givememotivation-screenshot.jpeg" class="first-project-image">
+        </div>
       </div>
       <div class="col-xs-6 project-description">
-        <a href="givememotivation.com" class="first-project-link"><h2>GiveMeMotivation.com</h2></a>
-        <p class="first-project-description">
-          A personal project developed by using Ruby on Rails. Find motivational images and videos from various categories. Don't know what to look for? Find a random image or video!
-        </p>
+        <div class="thumbnail">
+          <a href="givememotivation.com" class="first-project-link"><h2>GiveMeMotivation.com</h2></a>
+          <p class="first-project-description">
+            A personal project developed by using Ruby on Rails. Find motivational images and videos from various categories. Don't know what to look for? Find a random image or video!
+          </p>
+        </div>
       </div>
-      <div class="btn btn-lg btn-hide">HTML & CSS</div>
-      <div class="btn btn-lg btn-hide">Ruby</div>
-      <div class="btn btn-lg btn-hide">Ruby on Rails</div>
-      <div class="btn btn-lg btn-hide">Bootsrap</div>
+      <a href="#" class="btn btn-lg btn-hide disabled">HTML & CSS</a>
+      <a href="#" class="btn btn-lg btn-hide disabled">Ruby</a>
+      <a href="#" class="btn btn-lg btn-hide disabled">Ruby on Rails</a>
+      <a href="#" class="btn btn-lg btn-hide disabled">Bootstrap</a>
     </div>
   </div>
 </div>
