Add project. Make first project more responsive.

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       <div class="col-xs-6 col-sm-6 col-md-6">
         <div class="thumbnail thumbnail-tech">
             <h3 class="technology-header">Front-End Technology Used</h3>
-            <p class="front-end-technology-list">
+            <p>
               <li class="front-tech">HTML & CSS</li>
               <li class="front-tech">SCSS</li>
               <li class="front-tech">Javascript</li>
@@ -71,7 +71,7 @@
       <div class="col-xs-6 col-sm-6 col-md-6">
         <div class="thumbnail thumbnail-tech">
             <h3 class="technology-header">Back-End Technology Used</h3>
-            <p class="back-end-technology-list">
+            <p>
               <li class="back-tech">Ruby</li>
               <li class="back-tech">Ruby on Rails</li>
               <li class="back-tech">SQLite</li>
@@ -81,10 +81,12 @@
         </div>
       </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
-        <div class="thumbnail other-technology">
+        <div class="thumbnail thumbnail-tech">
           <h3 class="technology-header">Other Technology:</h3>
+            <p>
               <li class="back-tech">Frequent use of Git for version control and Github to host projects.</li>
               <li class="back-tech">RSpec for Test-Driven developemnt and Behavior-Driven development.</li>
+            </p>
         </div>
       </div>
     </div>
