--- a/projects.html
+++ b/projects.html
@@ -34,27 +34,48 @@
 <div class="jumbotron projects first-project">
   <div class="container-fluid">
     <div class="row row-projects">
-      <div class="col-xs-6">
-        <div class="thumbnail">
-          <img src="assets/images/givememotivation-screenshot.jpeg" class="first-project-image">
-        </div>
+      <div class="col-xs-12 col-sm-12 col-md-6">
+        <img src="assets/images/givememotivation-screenshot.jpeg" class="first-project-image img-responsive">
       </div>
-      <div class="col-xs-6 project-description">
-        <div class="thumbnail">
-          <a href="givememotivation.com" class="first-project-link"><h2>GiveMeMotivation.com</h2></a>
+      <div class="col-xs-12 col-sm-12 col-md-6">
+        <div class="thumbnail project-description">
+          <a href="givememotivation.com" class="first-project-link text-center"><h2>GiveMeMotivation.com</h2></a>
           <p class="first-project-description">
-            A personal project developed by using Ruby on Rails. Find motivational images and videos from various categories. Don't know what to look for? Find a random image or video!
+            A personal project developed using the Ruby on Rails framework. Find motivational images and videos from various categories. Don't know what to look for? Find a random image or video!
           </p>
         </div>
+        <div class="first-project-buttons">
+          <a href="#" class="btn btn-lg btn-hide disabled">HTML & CSS</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">Ruby</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">Ruby on Rails</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">Bootstrap</a>
+        </div>
       </div>
-      <a href="#" class="btn btn-lg btn-hide disabled">HTML & CSS</a>
-      <a href="#" class="btn btn-lg btn-hide disabled">Ruby</a>
-      <a href="#" class="btn btn-lg btn-hide disabled">Ruby on Rails</a>
-      <a href="#" class="btn btn-lg btn-hide disabled">Bootstrap</a>
     </div>
   </div>
 </div>
   <div class="jumbotron projects second-project">
+    <div class="container-fluid">
+    <div class="row row-projects">
+      <div class="col-xs-12 col-sm-12 col-md-6">
+        <img src="assets/images/Twitch-API.jpeg" class="second-project-image img-responsive">
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-6">
+        <div class="thumbnail project-description">
+          <a href="givememotivation.com" class="second-project-link text-center"><h2>Twitchtv JSON API</h2></a>
+          <p class="second-project-description">
+            A project inspired by FreeCodeCamp. Using the Twitch API, JSON data is gathered and used to determine whether a user is online, offline, or non-existent. A user's icon, the game they are playing and their status are posted if the user appears online.
+          </p>
+        </div>
+        <div class="second-project-buttons">
+          <a href="#" class="btn btn-lg btn-hide disabled">HTML & CSS</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">Javascript</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">JQuery</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">AJAX</a>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
   <div class="jumbotron projects third-project">
   </div>
