Add new project to projects page.

--- a/projects.html
+++ b/projects.html
@@ -35,11 +35,11 @@
   <div class="container-fluid">
     <div class="row row-projects">
       <div class="col-xs-12 col-sm-12 col-md-6">
-        <img src="assets/images/givememotivation-screenshot.jpeg" class="first-project-image img-responsive">
+        <a href="http://www.givememotivation.com"><img src="assets/images/givememotivation-screenshot.jpeg" href="http://www.givememotivation.com"  class="first-project-image img-responsive"></a>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-6">
         <div class="thumbnail project-description">
-          <a href="givememotivation.com" class="first-project-link text-center"><h2>GiveMeMotivation.com</h2></a>
+          <a href="http://www.givememotivation.com" class="first-project-link text-center"><h2>GiveMeMotivation.com</h2></a>
           <p class="first-project-description">
             A personal project developed using the Ruby on Rails framework. Find motivational images and videos from various categories. Don't know what to look for? Find a random image or video!
           </p>
@@ -49,20 +49,22 @@
           <a href="#" class="btn btn-lg btn-hide disabled">Ruby</a>
           <a href="#" class="btn btn-lg btn-hide disabled">Ruby on Rails</a>
           <a href="#" class="btn btn-lg btn-hide disabled">Bootstrap</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">PostgreSQL</a>
         </div>
       </div>
     </div>
   </div>
+  <div class="pos arrowBottom firstProject"></div>
 </div>
   <div class="jumbotron projects second-project">
     <div class="container-fluid">
     <div class="row row-projects">
       <div class="col-xs-12 col-sm-12 col-md-6">
-        <img src="assets/images/Twitch-API.jpeg" class="second-project-image img-responsive">
+        <a href="https://codepen.io/lynchd2/full/jqeWJm/"><img src="assets/images/Twitch-API.jpeg"  class="second-project-image img-responsive"></a>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-6">
         <div class="thumbnail project-description">
-          <a href="givememotivation.com" class="second-project-link text-center"><h2>Twitchtv JSON API</h2></a>
+          <a href="https://codepen.io/lynchd2/full/jqeWJm/" class="second-project-link text-center"><h2>Twitchtv JSON API</h2></a>
           <p class="second-project-description">
             A project inspired by FreeCodeCamp. Using the Twitch API, JSON data is gathered and used to determine whether a user is online, offline, or non-existent. A user's icon, the game they are playing and their status are posted if the user appears online.
           </p>
@@ -76,8 +78,31 @@
       </div>
     </div>
   </div>
-  </div>
+  <div class="pos arrowBottom secondProject"></div>
+</div>
   <div class="jumbotron projects third-project">
+    <div class="container-fluid">
+      <div class="row row-projects">
+        <div class="col-xs-12 col-sm-12 col-md-6">
+          <a href="https://codepen.io/lynchd2/full/VaGbev/"><img src="assets/images/Wiki-Viewer.jpeg"  class="third-project-image img-responsive"></a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6">
+          <div class="thumbnail project-description">
+            <a href="https://codepen.io/lynchd2/full/VaGbev/" class="third-project-link text-center"><h2>Wikipedia Viewer</h2></a>
+            <p class="third-project-description">
+              A project inspired by FreeCodeCamp. Using the Twitch API, JSON data is gathered and used to determine whether a user is online, offline, or non-existent. A user's icon, the game they are playing and their status are posted if the user appears online.
+            </p>
+          </div>
+          <div class="third-project-buttons">
+            <a href="#" class="btn btn-lg btn-hide disabled">HTML & CSS</a>
+            <a href="#" class="btn btn-lg btn-hide disabled">Javascript</a>
+            <a href="#" class="btn btn-lg btn-hide disabled">JQuery</a>
+            <a href="#" class="btn btn-lg btn-hide disabled">AJAX</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  <div class="pos arrowBottom thirdProject"></div>
   </div>
   <div class="jumbotron projects fourth-project">
   </div>
