--- a/about.html
+++ b/about.html
@@ -34,65 +34,63 @@
   <div class="jumbotron about">
 
     <div class="container">
-    <div class="row">
-      <div class="col-sm-12 col-md-12">
-        <div class="thumbnail thumbnail-intro">
-            <div class="profile-head"></div>
-            <h3 class="greetings-header">Greetings, World!</h3>
-            <div class="about-paragraph">
-              <p>My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology.</p>
-              <p>Aside from programming, I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love traveling and exploring new places. </p>
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <div class="thumbnail thumbnail-intro">
+              <div class="profile-head"></div>
+              <h3 class="greetings-header">Greetings, World!</h3>
+              <div class="about-paragraph">
+                <p>My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology.</p>
+                <p>Aside from programming, I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love traveling and exploring new places. </p>
+              </div>
+            </div>
+            <div class="pos arrowBottom arrowBottomAbout"></div>
+          </div>
+        </div> 
+      </div>
+    </div>
+  <div class="jumbotron about-skills">
+    <h3 class="skills-header">Skills</h3>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-md-6">
+            <div class="thumbnail thumbnail-tech">
+              <h3 class="technology-header">Front-End Technology Used</h3>
+                <p>
+                  <li class="front-tech">HTML & CSS</li>
+                  <li class="front-tech">SCSS</li>
+                  <li class="front-tech">Javascript</li>
+                  <li class="front-tech">JQuery</li>
+                  <li class="front-tech">Bootstrap</li>
+                  <li class="front-tech">AJAX</li>
+                </p>
+              </div>
+            </div>
+          <div class="col-xs-6 col-sm-6 col-md-6">
+            <div class="thumbnail thumbnail-tech">
+              <h3 class="technology-header">Back-End Technology Used</h3>
+                <p>
+                  <li class="back-tech">Ruby</li>
+                  <li class="back-tech">Ruby on Rails</li>
+                  <li class="back-tech">SQLite</li>
+                  <li class="back-tech">PostgreSQL</li>
+                  <li class="back-tech">Heroku</li>
+                </p>
             </div>
           </div>
-        <div class="pos arrowBottom"></div>
-      </div>
-    </div> 
-  </div>
-</div>
-
-
-<div class="jumbotron about-skills">
-    <h3 class="skills-header">Skills</h3>
-    <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-6 col-sm-6 col-md-6">
-        <div class="thumbnail thumbnail-tech">
-            <h3 class="technology-header">Front-End Technology Used</h3>
-            <p>
-              <li class="front-tech">HTML & CSS</li>
-              <li class="front-tech">SCSS</li>
-              <li class="front-tech">Javascript</li>
-              <li class="front-tech">JQuery</li>
-              <li class="front-tech">Bootstrap</li>
-              <li class="front-tech">AJAX</li>
-            </p>
-        </div>
-      </div>
-      <div class="col-xs-6 col-sm-6 col-md-6">
-        <div class="thumbnail thumbnail-tech">
-            <h3 class="technology-header">Back-End Technology Used</h3>
-            <p>
-              <li class="back-tech">Ruby</li>
-              <li class="back-tech">Ruby on Rails</li>
-              <li class="back-tech">SQLite</li>
-              <li class="back-tech">PostgreSQL</li>
-              <li class="back-tech">Heroku</li>
-            </p>
-        </div>
-      </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
-        <div class="thumbnail thumbnail-tech">
-          <h3 class="technology-header">Other Technology:</h3>
+          <div class="thumbnail thumbnail-tech">
+            <h3 class="technology-header">Other Technology:</h3>
             <p>
               <li class="back-tech">Frequent use of Git for version control and Github to host projects.</li>
               <li class="back-tech">RSpec for Test-Driven developemnt and Behavior-Driven development.</li>
             </p>
+          </div>
         </div>
       </div>
+      <div class="pos arrowTop arrowTopAbout"></div>
     </div>
-    <div class="pos arrowTop"></div>
   </div>
-</div>
 </div>
 </body>
 </html>
