Add third project and other project links, as well as codepen and github links

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
           <div class="thumbnail project-description">
             <a href="https://codepen.io/lynchd2/full/VaGbev/" class="third-project-link text-center"><h2>Wikipedia Viewer</h2></a>
             <p class="third-project-description">
-              A project inspired by FreeCodeCamp. Using the Twitch API, JSON data is gathered and used to determine whether a user is online, offline, or non-existent. A user's icon, the game they are playing and their status are posted if the user appears online.
+              Another project inspired by FreeCodeCamp. Using the Wikipedia API, a user inputs a search term and the a list of ten results from Wikipedia, as well as the first couple sentences from the description of each result, are listed. A user can click anywhere in each result to be redirected to the corresponding article on Wikipedia.
             </p>
           </div>
           <div class="third-project-buttons">
@@ -105,6 +105,14 @@
   <div class="pos arrowBottom thirdProject"></div>
   </div>
   <div class="jumbotron projects fourth-project">
+    <h2 class="text-center">Other things I have built:</h2>
+    <p class="other-programs-text">
+      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/TOP-Ruby-Programming/blob/master/tic_tac_toe.rb" class="other-project-link">Command line Tic-Tac-Toe written in Ruby</a></ol>
+      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/TOP-Ruby-Programming/tree/master/hangman" class="other-project-link">Command line Hangman written in Ruby</a></ol>
+      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/TOP-Ruby-Programming/blob/master/connect_four/lib/connect_four.rb" class="other-project-link">Command line Connect-Four written in Ruby</a></ol>
+    </p>
+    <h3>Feel free to browse my Github <a href="https://www.github.com/lynchd2" class="other-project-link">here</a> or my Codepen <a href="https://codepen.io/lynchd2/" class="other-project-link">here</a>.</h3>
+
   </div>
 </body>
 </html>
