Fix media queries, different background color on about page, fixed height in tech box.

--- a/about.html
+++ b/about.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Dylan Lynch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <script src="assets/js/application.js"></script>
   </head>
 <body class="full-background">
@@ -37,9 +37,9 @@
       <div class="row">
         <div class="col-sm-12 col-md-12">
           <div class="thumbnail thumbnail-intro">
-              <div class="profile-head"></div>
-              <h3 class="greetings-header">Greetings, World!</h3>
+              <h3 class="greetings-header text-center">Greetings, World!</h3>
               <div class="about-paragraph">
+                <div class="profile-head"></div>
                 <p>My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology.</p>
                 <p>Aside from programming, I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love traveling and exploring new places. </p>
               </div>
@@ -54,7 +54,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-6">
-            <div class="thumbnail thumbnail-tech">
+            <div class="thumbnail thumbnail-tech fix-height">
               <h3 class="technology-header">Front-End Technology Used</h3>
                 <p>
                   <li class="front-tech">HTML & CSS</li>
@@ -67,7 +67,7 @@
               </div>
             </div>
           <div class="col-xs-6 col-sm-6 col-md-6">
-            <div class="thumbnail thumbnail-tech">
+            <div class="thumbnail thumbnail-tech fix-height">
               <h3 class="technology-header">Back-End Technology Used</h3>
                 <p>
                   <li class="back-tech">Ruby</li>
