--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Dylan Lynch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <script src="assets/js/application.js"></script>
   </head>
 <body class="full-background">
@@ -112,7 +112,7 @@
       <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/TOP-Ruby-Programming/blob/master/connect_four/lib/connect_four.rb" class="other-project-link">Command line Connect-Four written in Ruby</a></ol>
     </p>
     <h3>Feel free to browse my Github <a href="https://www.github.com/lynchd2" class="other-project-link">here</a> or my Codepen <a href="https://codepen.io/lynchd2/" class="other-project-link">here</a>.</h3>
-
+    <div class="pos arrowTop arrowTopAbout"></div>
   </div>
 </body>
 </html>
