--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <ul class="nav navbar-nav navbar-right">     
-      <li class="navbar-slider"><a href="index.html" class="navbar-about"><span class="home-text">Home</span></a>
+      <li class="navbar-slider"><a href="home.html" class="navbar-about"><span class="home-text">Home</span></a>
       <div class="slider"></div>      
       </li>
       <div class="slider"></div> 
