--- a/home.html
+++ b/home.html
@@ -27,6 +27,9 @@
       <li class="navbar-slider"><a href="projects.html" class= "navbar-projects"><span class="project-text">Projects</span></a>
       <div class="slider"></div>
     </li>
+      <li class="navbar-slider"><a href="/blog/index.html" class= "navbar-projects"><span class="project-text">Blog</span></a>
+      <div class="slider"></div>
+    </li>
     </ul> 
   </div>
 </div>
