Create blog portion of personal portfolio with first post of VCS week 1

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website by Dylan Lynch</title>
+    <title>About Dylan Lynch</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -17,7 +18,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <ul class="nav navbar-nav navbar-right">     
-      <li class="navbar-slider"><a href="index.html" class="navbar-about"><span class="home-text">Home</span></a>
+      <li class="navbar-slider"><a href="home.html" class="navbar-about"><span class="home-text">Home</span></a>
       <div class="slider"></div>      
       </li>
       <div class="slider"></div> 
@@ -26,6 +27,7 @@
       </li>
       <li class="navbar-slider"><a href="projects.html" class= "navbar-projects"><span class="project-text">Projects</span></a>
       <div class="slider"></div>
+      </li>
     </li>
       <li class="navbar-slider"><a href="blog.html" class= "navbar-projects"><span class="project-text">Blog</span></a>
       <div class="slider"></div>
@@ -33,21 +35,11 @@
     </ul> 
   </div>
 </div>
-<div class="jumbotron home jumbotron-fluid">
-  <div class="container">
-    <div class="name-container">
-      <span class="brackets-name">["</span>
-      <span class="dylan-lynch">Dylan Lynch</span>
-      <span class="brackets-name">"]</span>
-    </div>
-    <div class="occupation-container">
-      <span class="brackets-occupation">[ "</span>
-        <span class="web-dev">Full Stack Web Developer</span>
-      <span class="brackets-occupation">" ]</span>
-    </div>
-  </div>
-    <a href= "http://www.github.com/lynchd2" class="github-black">Click</a>
-    <a href="mailto:dylynch91@gmail.com" class="mail-black"></a>
- </div>
-</body>
-</html>
+<div class="jumbotron">
+  <h1 class="text-center">Blog</h1>
+  <p class= "text-center">This sections outlines my Viking Code School experience which started July 5th and lasts for 16 weeks.</p>
+</div>
+<section class="container blog-list">
+  <a href="blog_posts/2016-07-10.html"><p>Week 1: Object-Oriented Ruby and RSpec</p></a>
+  <p class="blog-date">July 10th, 2016</p>
+</section>
