--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,10 @@
       <li class="navbar-slider"><a href="projects.html" class= "navbar-projects"><span class="project-text">Projects</span></a>
       <div class="slider"></div>
       </li>
+    </li>
+      <li class="navbar-slider"><a href="blog.html" class= "navbar-projects"><span class="project-text">Blog</span></a>
+      <div class="slider"></div>
+    </li>
     </ul> 
   </div>
 </div>
