--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Dylan Lynch</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Website by Dylan Lynch</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -27,7 +26,6 @@
       </li>
       <li class="navbar-slider"><a href="projects.html" class= "navbar-projects"><span class="project-text">Projects</span></a>
       <div class="slider"></div>
-    </li>
     </li>
       <li class="navbar-slider"><a href="blog.html" class= "navbar-projects"><span class="project-text">Blog</span></a>
       <div class="slider"></div>
