--- a/blog_posts/2016-07-10.html
+++ b/blog_posts/2016-07-10.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../main.css">
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-    <script src="assets/js/application.js"></script>
+    <script src="../assets/js/application.js"></script>
   </head>
 <body class="full-background">
 <div class="navbar navbar-default navbar-fixed-top">
